fix: completion bugfixes